fixed spacing

--- a/css/main.css
+++ b/css/main.css
@@ -34,7 +34,8 @@ p {
   font-size: 1.5rem;
   color: #512200;
   font-family: Dosis, serif;
-  margin: 0;
+  margin: 0 0 .5rem;
+
 }
 
 dl {
